style.css
.hero-image {
 background-size: cover;
 background-image: radial-gradient(circle, #ff218c, #ff416c, #ff664e, #ff8a31, #ffab19, #ddc20a, #b4d530, #81e55c, #00e2a0, #00d7da, #00c7fd, #21b1ff); 
 height: 300px;
 position: relative;
 margin-bottom: 7px;

}

.hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
}

.whatis {
margin: 0;
background-color: #ff595e;
}

.about {
    margin-bottom: 0;
    background-color: #FF924C;
}

.support {
    margin-bottom: 0;
    background-color: #ffca3a;
}

.library {
    margin-bottom: 0;
    background-color: #8ac926;
}

